Squashed commit of the following:
commit 9ca65d2e8e10c3ade97a1945b74b0a68ea7ab533
Author: IWKMS99 <alievsaid0909@yandex.ru>
Date:   Fri Jun 13 15:55:02 2025 +0300

    feat: add custom auth entry point and enhance order retrieval security

commit 60946e716a0e515ebe7ebd59d1bf38bdd7840f50
Author: IWKMS99 <alievsaid0909@yandex.ru>
Date:   Fri Jun 13 15:40:39 2025 +0300

    feat: add EmptyCartException for better error handling in order creation

commit ca4a6d06650ffbeaa8ab97bd746c245f601d825f
Author: IWKMS99 <alievsaid0909@yandex.ru>
Date:   Fri Jun 13 15:16:26 2025 +0300

    feat: secure createCategory, createProduct, and updateStock with ADMIN role access

commit cbbf7b53257eb97ca8142df97341adfef3b30af9
Author: IWKMS99 <alievsaid0909@yandex.ru>
Date:   Fri Jun 13 15:08:17 2025 +0300

    feat: set default USER role during registration in UserService

commit 92f1475e54a83070781aef637ec748245ecddd69
Author: IWKMS99 <alievsaid0909@yandex.ru>
Date:   Fri Jun 13 15:07:09 2025 +0300

    feat: update config for user roles and add role column in users table via SQL migration

commit fcc03cd4e95cefb83fae6f8a3fa6973ce88671d0
Author: IWKMS99 <alievsaid0909@yandex.ru>
Date:   Fri Jun 13 12:44:05 2025 +0300

    feat: add Role enum and update User entity with role field